# tfp-cardio-tesis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
BD2-20260218T192722Z-1-001/BD2/: 110(1).xws
cluster/: cluster.py  main.py
config/: default.yaml
docs/: 00_vision_general.md  01_datos_mitbih.md  02_preprocesamiento.md  03_extraccion_features.md  04_modelos.md  05_evaluacion.md  06_pipeline_y_ejecucion.md  07_metodologia_dsr.md  08_arquitectura.md  09_manual_ejecucion.md  10_python_fundamentos.md  11_api_prediccion.md  12_ejemplos_curl.md  README.md  analisis_y_plan.md
frontend/: app.js  index.html  styles.css
models/: best_model.json
models/autoencoder/: config.json  model.h5  pca.joblib  scaler.joblib
models/dbscan/: config.json
models/hdbscan/: config.json  scaler.joblib
models/kmeans/: config.json  pca.joblib  scaler.joblib
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_feature_extraction.ipynb  04_clustering.ipynb  05_evaluation.ipynb
prepocesamiento/: prepro_senal.ipynb
prepocesamiento/processed_signals/: aplicacion_clsuter.ipynb
src/ecg_anomaly/: cache.py  config.py  pipeline.py  seeding.py
src/ecg_anomaly/api/: __init__.py  app.py  predictor.py  schemas.py
src/ecg_anomaly/data/: loader.py  registry.py  splitting.py
src/ecg_anomaly/evaluation/: comparator.py  efficiency.py  extrinsic.py  intrinsic.py
src/ecg_anomaly/features/: manual.py  signal_pca.py
tests/: test_comparator.py  test_features.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_splitting.py
(+14 files in other folders)
